--- a/PL/Carts/CustomerWindow.xaml
+++ b/PL/Carts/CustomerWindow.xaml
@@ -8,12 +8,12 @@
         Title="CustomerWindow" Height="450" Width="800"
         DataContext="{Binding Path=cart , RelativeSource={RelativeSource self}}">
     <Grid>
-        <Label Content="שם:" HorizontalAlignment="Left" Margin="535,151,0,0" VerticalAlignment="Top" Height="38" Width="42"/>
+        <Label Content="שם:" HorizontalAlignment="Left" Margin="524,159,0,0" VerticalAlignment="Top" Height="38" Width="42"/>
         <TextBox x:Name="custName" HorizontalAlignment="Center" Margin="0,163,0,0" TextWrapping="Wrap" Text="{Binding CustomerName}" VerticalAlignment="Top" Width="167" Height="26"/>
-        <Label Content="כתובת:" HorizontalAlignment="Left" Margin="535,196,0,0" VerticalAlignment="Top" Height="38" Width="64"/>
+        <Label Content="כתובת:" HorizontalAlignment="Left" Margin="513,202,0,0" VerticalAlignment="Top" Height="38" Width="64"/>
         <TextBox  x:Name="custAddress" HorizontalAlignment="Center" Margin="0,208,0,0" TextWrapping="Wrap" Text="{Binding CustomerAdress}"  VerticalAlignment="Top" Width="167" Height="26"/>
-        <Label Content="מייל:" HorizontalAlignment="Left" Margin="564,259,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.174,-0.445" Height="38" Width="47"/>
+        <Label Content="מייל:" HorizontalAlignment="Left" Margin="529,240,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.174,-0.445" Height="38" Width="48"/>
         <TextBox x:Name="CustEmail" HorizontalAlignment="Center" Margin="0,247,0,0" TextWrapping="Wrap" Text="{Binding CustomerEmail}" VerticalAlignment="Top" Width="167" Height="26"/>
-        <Button x:Name="moveToCart"  Content="אישור פרטים " HorizontalAlignment="Left" Margin="333,345,0,0" VerticalAlignment="Top" Click="moveToCart_Click"/>
+        <Button x:Name="moveToCart"  Content="אישור פרטים " HorizontalAlignment="Left" Margin="352,324,0,0" VerticalAlignment="Top" Click="moveToCart_Click" Height="36" Width="132"/>
     </Grid>
 </Window>
