--- a/PL/Carts/CartWindow.xaml
+++ b/PL/Carts/CartWindow.xaml
@@ -9,7 +9,7 @@
         DataContext="{Binding Path=fullCart, RelativeSource={RelativeSource self}}">
 
     <Window.Resources>
-        <DataTemplate x:Key="productItemTemplate" DataType="local:ProductItem">
+        <DataTemplate x:Key="orderItemTemplate" DataType="local:OrderItem">
             <Grid>
 
                 <Grid.RowDefinitions>
@@ -30,12 +30,12 @@
 
                 <TextBox Grid.Column="0" x:Name="id" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding ID}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
                 <TextBox Grid.Column="1" x:Name="name" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.477,3.841" IsEnabled="False"/>
-                <TextBox Grid.Column="2" x:Name="price" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Price}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
-                <TextBox Grid.Column="3" x:Name="category" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Category_}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
-                <TextBox Grid.Column="4" x:Name="inStock" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding InStock}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
-                <TextBox Grid.Column="5" x:Name="amount" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Amount}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
-                <Button Grid.Column="6" Content="add "  CommandParameter="" Click="addProductToCart_Click" Width="100" Height="50" Margin="0"/>
-                <Button Grid.Column="7" Content="decrease"  CommandParameter="" Click="decreaseProductFromCart_Click" Width="100" Height="50" Margin="0" Visibility="Hidden"/>
+                <TextBox Grid.Column="2" x:Name="price" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding ProductID}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+                <TextBox Grid.Column="3" x:Name="category" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Price}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+                <TextBox Grid.Column="4" x:Name="inStock" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Amount}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+                <TextBox Grid.Column="5" x:Name="amount" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
+                <Button Grid.Column="6" Content="add"  CommandParameter="" Click="addProductToCart_Click" Width="100" Height="50" Margin="0"/>
+                <Button Grid.Column="7" Content="decrease"  CommandParameter="" Click="decreaseProductFromCart_Click" Width="100" Height="50" Margin="0"/>
                 <Button Grid.Column="8" Content="delete"  CommandParameter="" Click="deleteProductFromCart_Click" Width="100" Height="50" Margin="0" />
 
             </Grid>
@@ -50,11 +50,9 @@
         <Label Content="שם לקוח" HorizontalAlignment="Left"  VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
         <TextBox x:Name="totalPrice" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120"/>
         <Label Content=" מחיר סופי " HorizontalAlignment="Left"  VerticalAlignment="Top"/>
-        <ListView x:Name="productsCatalogList" ItemsSource="{Binding Items}" ItemTemplate="{StaticResource productItemTemplate}" HorizontalContentAlignment="Stretch" />
-        <Button x:Name="orderConfirmation" Content="אישור הזמנה" HorizontalAlignment="Left" Margin="336,347,0,0" VerticalAlignment="Top" Click="orderConfirmation_Click"
-                                  Height="60" Width="160" FontSize="22" Background="SteelBlue" FontWeight="Bold" Foreground="#FFFBF5F5" BorderBrush="#FFFBF5F5"/>
-        <Image HorizontalAlignment="Left" Height="140" Margin="10,337,0,0" VerticalAlignment="Top" Width="379" Source="/1111.jpg"/>
-
+        <ListView x:Name="productsCatalogList" ItemsSource="{Binding Items}" ItemTemplate="{StaticResource orderItemTemplate}" HorizontalContentAlignment="Stretch" />
+        <Button x:Name="orderConfirmation" Content="אישור הזמנה" HorizontalAlignment="Left" Margin="336,347,0,0" VerticalAlignment="Top" Click="orderConfirmation_Click"/>
+        <Image HorizontalAlignment="Left"  Margin="10,337,0,0" VerticalAlignment="Top" />
     </StackPanel>
 
 
