--- a/PL/Carts/CustomerWindow.xaml
+++ b/PL/Carts/CustomerWindow.xaml
@@ -14,6 +14,6 @@
         <TextBox  x:Name="custAddress" HorizontalAlignment="Center" Margin="0,208,0,0" TextWrapping="Wrap" Text="{Binding CustomerAdress}"  VerticalAlignment="Top" Width="167" Height="26"/>
         <Label Content="מייל:" HorizontalAlignment="Left" Margin="529,240,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.174,-0.445" Height="38" Width="48"/>
         <TextBox x:Name="CustEmail" HorizontalAlignment="Center" Margin="0,247,0,0" TextWrapping="Wrap" Text="{Binding CustomerEmail}" VerticalAlignment="Top" Width="167" Height="26"/>
-        <Button x:Name="moveToCart"  Content="אישור פרטים " HorizontalAlignment="Left" Margin="352,324,0,0" VerticalAlignment="Top" Click="moveToCart_Click" Height="36" Width="132"/>
+        <Button x:Name="moveToCart"  Content="אישור פרטים " HorizontalAlignment="Left" Margin="352,324,0,0" VerticalAlignment="Top" Click="moveToCart_Click" />
     </Grid>
 </Window>
