--- a/PL/Orders/NumOfOrder.xaml
+++ b/PL/Orders/NumOfOrder.xaml
@@ -6,10 +6,10 @@
         xmlns:local="clr-namespace:PL.Orders"
         mc:Ignorable="d"
         Title="NumOfOrder" Height="450" Width="800"
-        DataContext="{Binding Path=orderID , RelativeSource={RelativeSource self} }">
+        DataContext="{Binding  RelativeSource={RelativeSource self} }">
     <Grid> 
         <Label x:Name="numOrderL"  Content="קוד הזמנה :" HorizontalAlignment="Left" Margin="482,153,0,0" VerticalAlignment="Top" Height="34" Width="86"/>
-        <TextBox  x:Name="numOrderT" HorizontalAlignment="Left" Margin="247,152,0,0" TextWrapping="Wrap" Text="{Binding Path=orderID}" VerticalAlignment="Top" Width="170" Height="25" RenderTransformOrigin="0.5,0.5">
+        <TextBox  x:Name="numOrderT" HorizontalAlignment="Left" Margin="247,152,0,0" TextWrapping="Wrap" Text="{Binding Path=orderID, Mode=TwoWay}" VerticalAlignment="Top" Width="170" Height="25" RenderTransformOrigin="0.5,0.5">
             <TextBox.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -19,9 +19,8 @@
                 </TransformGroup>
             </TextBox.RenderTransform>
         </TextBox>
-        <Button x:Name="moveToTrackOrder" Content="אישור" HorizontalAlignment="Left" Margin="311,285,0,0" VerticalAlignment="Top"  Click="moveToTrackOrder_Click" 
-                  Height="60" Width="160" FontSize="22" Background="SteelBlue" FontWeight="Bold" Foreground="#FFFBF5F5" BorderBrush="#FFFBF5F5"/>
-        <Image HorizontalAlignment="Left" Height="151" Margin="34,302,0,0" VerticalAlignment="Top" Width="421" Source="/1111.jpg"/>
+        <Button x:Name="moveToTrackOrder" Content="אישור" HorizontalAlignment="Left" Margin="311,285,0,0" VerticalAlignment="Top"  Click="moveToTrackOrder_Click" />
+        <Image HorizontalAlignment="Left" Margin="34,302,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
