--- a/PL/Carts/CartWindow.xaml
+++ b/PL/Carts/CartWindow.xaml
@@ -25,6 +25,9 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+
                 </Grid.ColumnDefinitions>
 
                 <TextBox Grid.Column="0" x:Name="name" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.477,3.841" IsEnabled="False"/>
@@ -32,9 +35,10 @@
                 <TextBox Grid.Column="2" x:Name="category" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Price}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
                 <TextBox Grid.Column="3" x:Name="inStock" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding Amount}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
                 <TextBox Grid.Column="4" x:Name="amount" HorizontalAlignment="Left"  TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
-                <Button Grid.Column="5" Content="add"  CommandParameter="" Click="addProductToCart_Click" Width="100" Height="50" Margin="0"/>
-                <Button Grid.Column="6" Content="decrease"  CommandParameter="" Click="decreaseProductFromCart_Click" Width="100" Height="50" Margin="0"/>
-                <Button Grid.Column="7" Content="delete"  CommandParameter="" Click="deleteProductFromCart_Click" Width="100" Height="50" Margin="0" />
+                <Button Grid.Column="5" Content="+"  CommandParameter="" Click="addProductToCart_Click" Width="100" Height="50" Margin="0"/>
+                <Label Grid.Column="6" Content="1"></Label>
+                <Button Grid.Column="7" Content="-"  CommandParameter="" Click="decreaseProductFromCart_Click" Width="100" Height="50" Margin="0"/>
+                <Button Grid.Column="8" Content="mm"  CommandParameter="" Click="deleteProductFromCart_Click" Width="100" Height="50" Margin="0" />
 
             </Grid>
         </DataTemplate>
