--- a/PL/Carts/CartWindow.xaml
+++ b/PL/Carts/CartWindow.xaml
@@ -38,7 +38,7 @@
                 <Button Grid.Column="5" Content="+"  CommandParameter="" Click="addProductToCart_Click" Width="100" Height="50" Margin="0"/>
                 <Label Grid.Column="6" Content="1"></Label>
                 <Button Grid.Column="7" Content="-"  CommandParameter="" Click="decreaseProductFromCart_Click" Width="100" Height="50" Margin="0"/>
-                <Button Grid.Column="8" Content="mm"  CommandParameter="" Click="deleteProductFromCart_Click" Width="100" Height="50" Margin="0" />
+                <Button Grid.Column="8" Content="🗑️"  CommandParameter="" Click="deleteProductFromCart_Click" Width="100" Height="50" Margin="0" />
 
             </Grid>
         </DataTemplate>
