--- a/PL/Orders/Order.xaml
+++ b/PL/Orders/Order.xaml
@@ -20,21 +20,21 @@
             <RowDefinition Height="57*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="id" HorizontalAlignment="Left" Margin="431,27,0,0" TextWrapping="Wrap" Text="{Binding ID}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="id" HorizontalAlignment="Left" Margin="431,27,0,0" TextWrapping="Wrap" Text="{Binding ID}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
         <Label Content="ת.ז" HorizontalAlignment="Left" Margin="656,23,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="customerEmail" HorizontalAlignment="Left" Margin="431,124,0,0" TextWrapping="Wrap" Text="{Binding CustomerEmail}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="customerEmail" HorizontalAlignment="Left" Margin="431,124,0,0" TextWrapping="Wrap" Text="{Binding CustomerEmail}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
         <Label Content="אימייל לקוח" HorizontalAlignment="Left" Margin="647,116,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="customerAdress" HorizontalAlignment="Left" Margin="431,93,0,0" TextWrapping="Wrap" Text="{Binding CustomerAdress}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="customerAdress" HorizontalAlignment="Left" Margin="431,93,0,0" TextWrapping="Wrap" Text="{Binding CustomerAdress}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
         <Label Content="כתובת לקוח" HorizontalAlignment="Left" Margin="647,85,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="customerName" HorizontalAlignment="Left" Margin="431,58,0,0" TextWrapping="Wrap" Text="{Binding CustomerName }" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="customerName" HorizontalAlignment="Left" Margin="431,58,0,0" TextWrapping="Wrap" Text="{Binding CustomerName }" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
         <Label Content="שם לקוח" HorizontalAlignment="Left" Margin="655,54,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
-        <TextBox x:Name="status" HorizontalAlignment="Left" Margin="431,243,0,0" TextWrapping="Wrap" Text="{Binding Status}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="status" HorizontalAlignment="Left" Margin="431,243,0,0" TextWrapping="Wrap" Text="{Binding Status}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
         <Label Content="סטטוס" HorizontalAlignment="Left" Margin="666,237,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.654,-0.054"/>
-        <TextBox  x:Name="totalPrice" HorizontalAlignment="Left" Margin="431,281,0,0" TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120"/>
+        <TextBox  x:Name="totalPrice" HorizontalAlignment="Left" Margin="431,281,0,0" TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
         <Label Content="מחיר סופי" HorizontalAlignment="Left" Margin="656,272,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="paymentDate" HorizontalAlignment="Left" Margin="431,149,0,0" TextWrapping="Wrap" Text="{Binding PaymentDate}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="paymentDate" HorizontalAlignment="Left" Margin="431,149,0,0" TextWrapping="Wrap" Text="{Binding PaymentDate}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
         <Label Content="תאריך ביצוע הזמנה" HorizontalAlignment="Left" Margin="607,147,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="sentDate" HorizontalAlignment="Left" Margin="431,179,0,0" TextWrapping="Wrap" Text="{Binding ShipDate}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="sentDate" HorizontalAlignment="Left" Margin="431,179,0,0" TextWrapping="Wrap" Text="{Binding ShipDate}" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
         <Label Content="תאריך שליחת הזמנה" HorizontalAlignment="Left" Margin="607,175,0,0" VerticalAlignment="Top"/>
         <Button x:Name="sentDateUpdateButton" IsEnabled="{Binding ElementName=sentDate ,Path=Text,Converter={StaticResource inputEnabledConverter}}"  HorizontalAlignment="Left" Margin="220,160,0,0" VerticalAlignment="Top" Width="91" Content="update send" Height="37" Click="sentDateUpdateButton_Click"/>
         <TextBox x:Name="recievedDate" HorizontalAlignment="Left" Margin="431,210,0,0" TextWrapping="Wrap" Text="{Binding DeliveryDate}" VerticalAlignment="Top" Width="120"/>
